--- a/00-Start/00-Aufsetzen-des-Containers.ipynb
+++ b/00-Start/00-Aufsetzen-des-Containers.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,12 +352,13 @@
     "sudo lxc-create --template ubuntu --name bsa-bashy\n",
     "sudo lxc-update-config -c /var/lib/lxc/bsa-bashy/config\n",
     "sudo lxc-start --name bsa-bashy\n",
+    "sleep 5\n",
     "sudo lxc-ls bsa-bashy --fancy' > bsa-start.sh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -369,6 +370,7 @@
       "sudo lxc-create --template ubuntu --name bsa-bashy\n",
       "sudo lxc-update-config -c /var/lib/lxc/bsa-bashy/config\n",
       "sudo lxc-start --name bsa-bashy\n",
+      "sleep 5\n",
       "sudo lxc-ls bsa-bashy --fancy\n"
      ]
     }
@@ -388,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -413,19 +415,19 @@
       "debconf: (Can't locate Term/ReadLine.pm in @INC (you may need to install the Term::ReadLine module) (@INC contains: /etc/perl /usr/local/lib/x86_64-linux-gnu/perl/5.22.1 /usr/local/share/perl/5.22.1 /usr/lib/x86_64-linux-gnu/perl5/5.22 /usr/share/perl5 /usr/lib/x86_64-linux-gnu/perl/5.22 /usr/share/perl/5.22 /usr/local/lib/site_perl /usr/lib/x86_64-linux-gnu/perl-base .) at /usr/share/perl5/Debconf/FrontEnd/Readline.pm line 7.)\n",
       "debconf: greife zurück auf die Oberfläche: Teletype\n",
       "Creating SSH2 RSA key; this may take some time ...\n",
-      "2048 SHA256:fVJU6pJdSTnSjudcakyGa1oltDmI3nNDXlcWE0q6dhw root@virtualbox-ubuntu1604 (RSA)\n",
+      "2048 SHA256:Iww6lpOGlqR8FhgFkwRsJDvEeY+JgPAkLozIVVSMnFs root@virtualbox-ubuntu1604 (RSA)\n",
       "Creating SSH2 DSA key; this may take some time ...\n",
-      "1024 SHA256:ZiwbNl+RRmLZoQeEryrdgAbO22grPQLMaxfi5jLPHuk root@virtualbox-ubuntu1604 (DSA)\n",
+      "1024 SHA256:LUnf3VXoOixR7YcrY6EvutxAUqXKOAzKsXHr6e2jQjQ root@virtualbox-ubuntu1604 (DSA)\n",
       "Creating SSH2 ECDSA key; this may take some time ...\n",
-      "256 SHA256:ZBlZCO1nIue55btR8jxLgcYRrF4afEIb/vflXoBCY/A root@virtualbox-ubuntu1604 (ECDSA)\n",
+      "256 SHA256:YKoZrdN1FVqmurerlJsh2Nh/fKWv01IDAcVvYFN5NiA root@virtualbox-ubuntu1604 (ECDSA)\n",
       "Creating SSH2 ED25519 key; this may take some time ...\n",
-      "256 SHA256:lwRcV5Hbseiukes3iZYZEJHnM4M5+5TzPSUQEO6VYyQ root@virtualbox-ubuntu1604 (ED25519)\n",
+      "256 SHA256:Aig5DmQ0kseEkvA1sjdRtxOZBxfa8gEqw6DQ4P92aI8 root@virtualbox-ubuntu1604 (ED25519)\n",
       "invoke-rc.d: could not determine current runlevel\n",
       "invoke-rc.d: policy-rc.d denied execution of start.\n",
       "\n",
       "Current default time zone: 'Etc/UTC'\n",
-      "Local time is now:      Mon Oct  2 13:01:12 UTC 2017.\n",
-      "Universal Time is now:  Mon Oct  2 13:01:12 UTC 2017.\n",
+      "Local time is now:      Mon Oct  2 13:06:45 UTC 2017.\n",
+      "Universal Time is now:  Mon Oct  2 13:06:45 UTC 2017.\n",
       "\n",
       "\n",
       "##\n",
@@ -437,9 +439,10 @@
       "Please update your configuration file!\n",
       "+ sudo lxc-update-config -c /var/lib/lxc/bsa-bashy/config\n",
       "+ sudo lxc-start --name bsa-bashy\n",
+      "+ sleep 5\n",
       "+ sudo lxc-ls bsa-bashy --fancy\n",
-      "NAME      STATE   AUTOSTART GROUPS IPV4 IPV6 \n",
-      "bsa-bashy RUNNING 0         -      -    -    \n"
+      "NAME      STATE   AUTOSTART GROUPS IPV4       IPV6 \n",
+      "bsa-bashy RUNNING 0         -      10.0.3.167 -    \n"
      ]
     }
    ],
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -508,8 +511,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Arbeiten auf der bsa-bashy\n",
-    "\n",
+    "### Arbeiten auf der bsa-bashy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ sudo lxc-create --template ubuntu --name bsa-bashy\n",
+      "The configuration file contains legacy configuration keys.\n",
+      "Please update your configuration file!\n",
+      "The configuration file contains legacy configuration keys.\n",
+      "Please update your configuration file!\n",
+      "Checking cache download in /var/cache/lxc/xenial/rootfs-amd64 ... \n",
+      "Copy /var/cache/lxc/xenial/rootfs-amd64 to /var/lib/lxc/bsa-bashy/rootfs ... \n",
+      "Copying rootfs to /var/lib/lxc/bsa-bashy/rootfs ...\n",
+      "Generating locales (this might take a while)...\n",
+      "  de_DE.UTF-8... done\n",
+      "Generation complete.\n",
+      "debconf: kann Oberfläche nicht initialisieren: Dialog\n",
+      "debconf: (Die Dialog-Oberfläche funktioniert nicht auf einem Dumb-Terminal, einem Emacs-Shellbuffer oder ohne ein steuerndes Terminal.)\n",
+      "debconf: greife zurück auf die Oberfläche: Readline\n",
+      "debconf: kann Oberfläche nicht initialisieren: Readline\n",
+      "debconf: (Can't locate Term/ReadLine.pm in @INC (you may need to install the Term::ReadLine module) (@INC contains: /etc/perl /usr/local/lib/x86_64-linux-gnu/perl/5.22.1 /usr/local/share/perl/5.22.1 /usr/lib/x86_64-linux-gnu/perl5/5.22 /usr/share/perl5 /usr/lib/x86_64-linux-gnu/perl/5.22 /usr/share/perl/5.22 /usr/local/lib/site_perl /usr/lib/x86_64-linux-gnu/perl-base .) at /usr/share/perl5/Debconf/FrontEnd/Readline.pm line 7.)\n",
+      "debconf: greife zurück auf die Oberfläche: Teletype\n",
+      "Creating SSH2 RSA key; this may take some time ...\n",
+      "2048 SHA256:ur8u4kPmHNiHMzNzIvfR5XaWgOnhFjcZzz05dC0UXMo root@virtualbox-ubuntu1604 (RSA)\n",
+      "Creating SSH2 DSA key; this may take some time ...\n",
+      "1024 SHA256:reI01C3Ha6sf50uNatK21s6dTw9D0bMtYNlnh/ECSB4 root@virtualbox-ubuntu1604 (DSA)\n",
+      "Creating SSH2 ECDSA key; this may take some time ...\n",
+      "256 SHA256:7W2bpqX3P3BIZVhiyUAGdN6WMrlGAOvagOsALns7WH8 root@virtualbox-ubuntu1604 (ECDSA)\n",
+      "Creating SSH2 ED25519 key; this may take some time ...\n",
+      "256 SHA256:uaeBexWpeN0UNEOgkBaUdEuzBePwqPH3erZGAuYhno8 root@virtualbox-ubuntu1604 (ED25519)\n",
+      "invoke-rc.d: could not determine current runlevel\n",
+      "invoke-rc.d: policy-rc.d denied execution of start.\n",
+      "\n",
+      "Current default time zone: 'Etc/UTC'\n",
+      "Local time is now:      Mon Oct  2 13:04:53 UTC 2017.\n",
+      "Universal Time is now:  Mon Oct  2 13:04:53 UTC 2017.\n",
+      "\n",
+      "\n",
+      "##\n",
+      "# The default user is 'ubuntu' with password 'ubuntu'!\n",
+      "# Use the 'sudo' command to run tasks as root in the container.\n",
+      "##\n",
+      "\n",
+      "The configuration file contains legacy configuration keys.\n",
+      "Please update your configuration file!\n",
+      "+ sudo lxc-update-config -c /var/lib/lxc/bsa-bashy/config\n",
+      "+ sudo lxc-start --name bsa-bashy\n",
+      "+ sudo lxc-ls bsa-bashy --fancy\n",
+      "NAME      STATE   AUTOSTART GROUPS IPV4 IPV6 \n",
+      "bsa-bashy RUNNING 0         -      -    -    \n"
+     ]
+    }
+   ],
+   "source": [
+    "./bsa-start.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Via:\n",
     "\n",
     "* lxc\n",
@@ -565,30 +634,6 @@
     "    vagrant@virtualbox-ubuntu1604:~/bsa/hands-on-bsa/00-Start$\n",
     "    ```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Login via ssh\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ls -lachi ~/.ssh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
