--- a/00-Start/00-Aufsetzen-des-Containers.ipynb
+++ b/00-Start/00-Aufsetzen-des-Containers.ipynb
@@ -15,6 +15,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Installation prüfen\n",
+    "\n",
+    "Pakete sollten installiert sein:\n",
+    "\n",
+    "* lxc\n",
+    "* debootstrap\n",
+    "* bridge-utils\n",
+    "\n",
+    "Das Paket `lxc` ist nicht installiert. Dies wurde aus den neusten Quellen kompaliert. `debootstrap` ist als Paket installiert. Das Paket `bridge-utils` ist nicht installiert.\n",
+    "\n",
+    "Mit `apt-cache policy` bzw. `apt policy` kann geprüft werden, welche Pakete installiert sind oder nicht."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lxc.default_config\n",
+      "lxc.lxcpath\n",
+      "lxc.bdev.lvm.vg\n",
+      "lxc.bdev.lvm.thin_pool\n",
+      "lxc.bdev.zfs.root\n",
+      "lxc.cgroup.use\n",
+      "lxc.cgroup.pattern\n"
+     ]
+    }
+   ],
+   "source": [
+    "sudo lxc-config -l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "debootstrap:\n",
+      "  Installiert:           1.0.78+nmu1ubuntu1.4\n",
+      "  Installationskandidat: 1.0.78+nmu1ubuntu1.4\n",
+      "  Versionstabelle:\n",
+      " *** 1.0.78+nmu1ubuntu1.4 500\n",
+      "        500 http://us.archive.ubuntu.com/ubuntu xenial-updates/main amd64 Packages\n",
+      "        500 http://us.archive.ubuntu.com/ubuntu xenial-updates/main i386 Packages\n",
+      "        100 /var/lib/dpkg/status\n",
+      "     1.0.78+nmu1ubuntu1 500\n",
+      "        500 http://us.archive.ubuntu.com/ubuntu xenial/main amd64 Packages\n",
+      "        500 http://us.archive.ubuntu.com/ubuntu xenial/main i386 Packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "apt-cache policy debootstrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bridge-utils:\n",
+      "  Installiert:           (keine)\n",
+      "  Installationskandidat: 1.5-9ubuntu1\n",
+      "  Versionstabelle:\n",
+      "     1.5-9ubuntu1 500\n",
+      "        500 http://us.archive.ubuntu.com/ubuntu xenial/main amd64 Packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "apt policy bridge-utils"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Auflisten von vorhandenen Containern\n",
     "\n",
     "Mehr zu lxc-ls mit lxc-ls --help."
@@ -22,22 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME      STATE   AUTOSTART GROUPS IPV4       IPV6 \n",
-      "ais-bashy RUNNING 0         -      10.0.3.15  -    \n",
-      "db        RUNNING 0         -      10.0.3.147 -    \n",
-      "playbooks RUNNING 0         -      10.0.3.80  -    \n",
-      "web1      RUNNING 0         -      10.0.3.208 -    \n",
-      "web2      RUNNING 0         -      10.0.3.42  -    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sudo lxc-ls --fancy"
    ]
@@ -51,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -75,19 +151,19 @@
       "debconf: (Can't locate Term/ReadLine.pm in @INC (you may need to install the Term::ReadLine module) (@INC contains: /etc/perl /usr/local/lib/x86_64-linux-gnu/perl/5.22.1 /usr/local/share/perl/5.22.1 /usr/lib/x86_64-linux-gnu/perl5/5.22 /usr/share/perl5 /usr/lib/x86_64-linux-gnu/perl/5.22 /usr/share/perl/5.22 /usr/local/lib/site_perl /usr/lib/x86_64-linux-gnu/perl-base .) at /usr/share/perl5/Debconf/FrontEnd/Readline.pm line 7.)\n",
       "debconf: greife zurück auf die Oberfläche: Teletype\n",
       "Creating SSH2 RSA key; this may take some time ...\n",
-      "2048 SHA256:bcrmH4qCKslX3sPNyc7tO5oFmLdyJQuSntXszaDEzCo root@virtualbox-ubuntu1604 (RSA)\n",
+      "2048 SHA256:n/3y6oPYDcLZd1BkT2BN4tMdxmGuPZL7YfDT7b/AAsw root@rdf-dev (RSA)\n",
       "Creating SSH2 DSA key; this may take some time ...\n",
-      "1024 SHA256:2gLCfaEwK/SBc0oPYd+KeK6rV+yImQ+pd/CjkyL6dAM root@virtualbox-ubuntu1604 (DSA)\n",
+      "1024 SHA256:2J3e32dygiNMVtABSfCe4/lDeizkwCUjLJI2ZIfxjRY root@rdf-dev (DSA)\n",
       "Creating SSH2 ECDSA key; this may take some time ...\n",
-      "256 SHA256:oWNJiFVIYPptyhx9/nqkYndefjEqy3IdWXP65uY+rdI root@virtualbox-ubuntu1604 (ECDSA)\n",
+      "256 SHA256:yE77AB5AN9e/mpWztboimLhfgXnv5QG3ULlkjZ5d/B4 root@rdf-dev (ECDSA)\n",
       "Creating SSH2 ED25519 key; this may take some time ...\n",
-      "256 SHA256:meU08sNgZJD8sESyZWyudJmbi2WRNyGdqr6G/k4s5K4 root@virtualbox-ubuntu1604 (ED25519)\n",
+      "256 SHA256:H5El6UJ2AD3stGKUT0RUGaddIsKzaTujokJDu78LJ4Q root@rdf-dev (ED25519)\n",
       "invoke-rc.d: could not determine current runlevel\n",
       "invoke-rc.d: policy-rc.d denied execution of start.\n",
       "\n",
       "Current default time zone: 'Etc/UTC'\n",
-      "Local time is now:      Mon Oct  2 13:00:12 UTC 2017.\n",
-      "Universal Time is now:  Mon Oct  2 13:00:12 UTC 2017.\n",
+      "Local time is now:      Tue Oct 17 08:45:03 UTC 2017.\n",
+      "Universal Time is now:  Tue Oct 17 08:45:03 UTC 2017.\n",
       "\n",
       "\n",
       "##\n",
@@ -113,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +265,7 @@
      "output_type": "stream",
      "text": [
       "NAME      STATE   AUTOSTART GROUPS IPV4      IPV6 \n",
-      "bsa-bashy RUNNING 0         -      10.0.3.16 -    \n"
+      "bsa-bashy RUNNING 0         -      10.0.3.27 -    \n"
      ]
     }
    ],
@@ -208,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -251,22 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME      STATE   AUTOSTART GROUPS IPV4       IPV6 \n",
-      "ais-bashy RUNNING 0         -      10.0.3.15  -    \n",
-      "db        RUNNING 0         -      10.0.3.147 -    \n",
-      "playbooks RUNNING 0         -      10.0.3.80  -    \n",
-      "web1      RUNNING 0         -      10.0.3.208 -    \n",
-      "web2      RUNNING 0         -      10.0.3.42  -    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sudo lxc-ls --fancy"
    ]
@@ -280,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -415,19 +478,19 @@
       "debconf: (Can't locate Term/ReadLine.pm in @INC (you may need to install the Term::ReadLine module) (@INC contains: /etc/perl /usr/local/lib/x86_64-linux-gnu/perl/5.22.1 /usr/local/share/perl/5.22.1 /usr/lib/x86_64-linux-gnu/perl5/5.22 /usr/share/perl5 /usr/lib/x86_64-linux-gnu/perl/5.22 /usr/share/perl/5.22 /usr/local/lib/site_perl /usr/lib/x86_64-linux-gnu/perl-base .) at /usr/share/perl5/Debconf/FrontEnd/Readline.pm line 7.)\n",
       "debconf: greife zurück auf die Oberfläche: Teletype\n",
       "Creating SSH2 RSA key; this may take some time ...\n",
-      "2048 SHA256:Iww6lpOGlqR8FhgFkwRsJDvEeY+JgPAkLozIVVSMnFs root@virtualbox-ubuntu1604 (RSA)\n",
+      "2048 SHA256:aoKA2U1IaCFgPWOz2UsOMPRXl4e7o7hUjuOFfGfiALg root@rdf-dev (RSA)\n",
       "Creating SSH2 DSA key; this may take some time ...\n",
-      "1024 SHA256:LUnf3VXoOixR7YcrY6EvutxAUqXKOAzKsXHr6e2jQjQ root@virtualbox-ubuntu1604 (DSA)\n",
+      "1024 SHA256:qAT5w57XgPSWZVq19aiQlOJmTfWaCWDy6BHBtm7I+Yw root@rdf-dev (DSA)\n",
       "Creating SSH2 ECDSA key; this may take some time ...\n",
-      "256 SHA256:YKoZrdN1FVqmurerlJsh2Nh/fKWv01IDAcVvYFN5NiA root@virtualbox-ubuntu1604 (ECDSA)\n",
+      "256 SHA256:xySuFT0ImgQE4W2/+biEmI97R0poqGH/7HXJpE2VAb4 root@rdf-dev (ECDSA)\n",
       "Creating SSH2 ED25519 key; this may take some time ...\n",
-      "256 SHA256:Aig5DmQ0kseEkvA1sjdRtxOZBxfa8gEqw6DQ4P92aI8 root@virtualbox-ubuntu1604 (ED25519)\n",
+      "256 SHA256:zrHZWogOg2rGcy2Vr4yTHBFkfpjbBrjLM50vDeaE8TM root@rdf-dev (ED25519)\n",
       "invoke-rc.d: could not determine current runlevel\n",
       "invoke-rc.d: policy-rc.d denied execution of start.\n",
       "\n",
       "Current default time zone: 'Etc/UTC'\n",
-      "Local time is now:      Mon Oct  2 13:06:45 UTC 2017.\n",
-      "Universal Time is now:  Mon Oct  2 13:06:45 UTC 2017.\n",
+      "Local time is now:      Tue Oct 17 09:04:04 UTC 2017.\n",
+      "Universal Time is now:  Tue Oct 17 09:04:04 UTC 2017.\n",
       "\n",
       "\n",
       "##\n",
@@ -441,8 +504,8 @@
       "+ sudo lxc-start --name bsa-bashy\n",
       "+ sleep 5\n",
       "+ sudo lxc-ls bsa-bashy --fancy\n",
-      "NAME      STATE   AUTOSTART GROUPS IPV4       IPV6 \n",
-      "bsa-bashy RUNNING 0         -      10.0.3.167 -    \n"
+      "NAME      STATE   AUTOSTART GROUPS IPV4      IPV6 \n",
+      "bsa-bashy RUNNING 0         -      10.0.3.23 -    \n"
      ]
     }
    ],
@@ -452,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -541,19 +604,19 @@
       "debconf: (Can't locate Term/ReadLine.pm in @INC (you may need to install the Term::ReadLine module) (@INC contains: /etc/perl /usr/local/lib/x86_64-linux-gnu/perl/5.22.1 /usr/local/share/perl/5.22.1 /usr/lib/x86_64-linux-gnu/perl5/5.22 /usr/share/perl5 /usr/lib/x86_64-linux-gnu/perl/5.22 /usr/share/perl/5.22 /usr/local/lib/site_perl /usr/lib/x86_64-linux-gnu/perl-base .) at /usr/share/perl5/Debconf/FrontEnd/Readline.pm line 7.)\n",
       "debconf: greife zurück auf die Oberfläche: Teletype\n",
       "Creating SSH2 RSA key; this may take some time ...\n",
-      "2048 SHA256:ur8u4kPmHNiHMzNzIvfR5XaWgOnhFjcZzz05dC0UXMo root@virtualbox-ubuntu1604 (RSA)\n",
+      "2048 SHA256:ksLjMFKfZv/8fy1wtIC5LXBY0QXB4Mpld8b6b47wDcU root@rdf-dev (RSA)\n",
       "Creating SSH2 DSA key; this may take some time ...\n",
-      "1024 SHA256:reI01C3Ha6sf50uNatK21s6dTw9D0bMtYNlnh/ECSB4 root@virtualbox-ubuntu1604 (DSA)\n",
+      "1024 SHA256:F2FZkGVpoOjmhkhnR0bDvRTngjc1xfmO7muTpd9M1sA root@rdf-dev (DSA)\n",
       "Creating SSH2 ECDSA key; this may take some time ...\n",
-      "256 SHA256:7W2bpqX3P3BIZVhiyUAGdN6WMrlGAOvagOsALns7WH8 root@virtualbox-ubuntu1604 (ECDSA)\n",
+      "256 SHA256:4kHIDDXCk8wvrn75hzAyunaL6d42NooXoTD23Ox1kIc root@rdf-dev (ECDSA)\n",
       "Creating SSH2 ED25519 key; this may take some time ...\n",
-      "256 SHA256:uaeBexWpeN0UNEOgkBaUdEuzBePwqPH3erZGAuYhno8 root@virtualbox-ubuntu1604 (ED25519)\n",
+      "256 SHA256:Dl5dx26HtJp+VGNzemlqyjCtOItE9gz15LwTkx8IINw root@rdf-dev (ED25519)\n",
       "invoke-rc.d: could not determine current runlevel\n",
       "invoke-rc.d: policy-rc.d denied execution of start.\n",
       "\n",
       "Current default time zone: 'Etc/UTC'\n",
-      "Local time is now:      Mon Oct  2 13:04:53 UTC 2017.\n",
-      "Universal Time is now:  Mon Oct  2 13:04:53 UTC 2017.\n",
+      "Local time is now:      Tue Oct 17 09:05:56 UTC 2017.\n",
+      "Universal Time is now:  Tue Oct 17 09:05:56 UTC 2017.\n",
       "\n",
       "\n",
       "##\n",
@@ -565,9 +628,10 @@
       "Please update your configuration file!\n",
       "+ sudo lxc-update-config -c /var/lib/lxc/bsa-bashy/config\n",
       "+ sudo lxc-start --name bsa-bashy\n",
+      "+ sleep 5\n",
       "+ sudo lxc-ls bsa-bashy --fancy\n",
-      "NAME      STATE   AUTOSTART GROUPS IPV4 IPV6 \n",
-      "bsa-bashy RUNNING 0         -      -    -    \n"
+      "NAME      STATE   AUTOSTART GROUPS IPV4      IPV6 \n",
+      "bsa-bashy RUNNING 0         -      10.0.3.36 -    \n"
      ]
     }
    ],
