--- a/14_Zugriffsrechte.ipynb
+++ b/14_Zugriffsrechte.ipynb
@@ -1331,15 +1331,33 @@
     "- Attribut s  \n",
     "  beim löschen wird mit Nullen überschrieben\n",
     "- Attribut A  \n",
-    "  atime wird nicht geändert\n",
-    "\n",
+    "  atime wird nicht geändert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Nur root\n",
     "\n",
     "- Attribut a  \n",
     "  Inhalt kann nicht geändert werden, nur angehängt\n",
     "- Attribut i  \n",
-    "  kein ändern, Umbenennen und löschen mehr\n",
-    "\n",
+    "  kein ändern, Umbenennen und löschen mehr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "Siehe man chattr\n",
     "\n",
     "oder\n",
