--- a/15_Netzwerk.ipynb
+++ b/15_Netzwerk.ipynb
@@ -185,8 +185,8 @@
    "source": [
     "Interface de- bzw. aktivieren\n",
     "\n",
-    "- \\# ip link set eth0 down\n",
-    "- \\# ip link set eth0 up"
+    "- \\# ip link set enp0s3 down\n",
+    "- \\# ip link set enp0s3 up"
    ]
   },
   {
@@ -299,18 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cannot find device \"enp0s3\"\n",
-      "Cannot find device \"enp0s3\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sudo ip link set enp0s3 down\n",
     "sudo ip link set enp0s3 name vagrant\n",
@@ -319,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2: vagrant: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP mode DEFAULT group default qlen 1000\n",
+      "2: vagrant: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc pfifo_fast state DOWN mode DEFAULT group default qlen 1000\n",
       "    link/ether 08:00:27:f2:c8:06 brd ff:ff:ff:ff:ff:ff\n"
      ]
     }
@@ -337,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- \\# ip address add 192.168.99.14/24 broadcast 255.255.255.0 dev enp0s8  \n",
+    "- \\# ip address add 192.168.99.14/24 broadcast 192.168.99.255 dev enp0s8  \n",
     "  Immer boradcast (+ setzt alle Hostbits) und device angeben"
    ]
   },
@@ -556,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +586,9 @@
      "output_type": "stream",
      "text": [
       "2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000\n",
-      "    link/ether 08:00:27:f2:c8:06 brd ff:ff:ff:ff:ff:ff\n"
+      "    link/ether 08:00:27:f2:c8:06 brd ff:ff:ff:ff:ff:ff\n",
+      "    inet6 fe80::a00:27ff:fef2:c806/64 scope link \n",
+      "       valid_lft forever preferred_lft forever\n"
      ]
     }
    ],
@@ -605,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -624,6 +617,8 @@
       "2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000\n",
       "    link/ether 08:00:27:f2:c8:06 brd ff:ff:ff:ff:ff:ff\n",
       "    inet 10.0.2.15/24 brd 10.0.2.255 scope global enp0s3\n",
+      "       valid_lft forever preferred_lft forever\n",
+      "    inet6 fe80::a00:27ff:fef2:c806/64 scope link \n",
       "       valid_lft forever preferred_lft forever\n"
      ]
     }
@@ -808,10 +803,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-   prote kernel → Weg ging über Kernel Mehr /etc/iproute2/rt\\_protos\n",
-    "-   scope link → Netz steht direkt am NIC\n",
-    "-   src 192.168.2.10 → ausgehende prim. Adr.\n",
-    "-   via → zeigt auf Router eines Netzes und NIC default → default Route"
+    "- prote kernel  \n",
+    "  Weg ging über Kernel Mehr /etc/iproute2/rt\\_protos\n",
+    "- scope link  \n",
+    "  Netz steht direkt am NIC\n",
+    "- src 192.168.2.10  \n",
+    "  ausgehende prim. Adr.\n",
+    "- via  \n",
+    "  zeigt auf Router eines Netzes und \n",
+    "- NIC default  \n",
+    "  default Route"
    ]
   },
   {
@@ -839,9 +840,10 @@
    "source": [
     "#### Advanced Routing\n",
     "\n",
-    "-   Routing Entscheidungen anhand von Quelladressen, Eingangsinterface\n",
-    "    oder iptabels treffen. → Policy Routing\n",
-    "-   Policy Routing Database (PRDB) speichern Policy Routing Tables"
+    "- Routing Entscheidungen anhand von Quelladressen, Eingangsinterface oder iptabels treffen.  \n",
+    "  Policy Routing\n",
+    "- Policy Routing Database (PRDB) speichern  \n",
+    "  Policy Routing Tables"
    ]
   },
   {
@@ -867,9 +869,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-   local wird vom Kernel verwaltet (hohe Prio)\n",
-    "-   main wird gesetzt von ip route bzw. route. Ist die Standardtabelle.\n",
-    "-   default standardmäßig leer"
+    "- local  \n",
+    "  wird vom Kernel verwaltet (hohe Prio)\n",
+    "- main  \n",
+    "  wird gesetzt von ip route bzw. route. Ist die Standardtabelle.\n",
+    "- default  \n",
+    "  standardmäßig leer"
    ]
   },
   {
@@ -1179,12 +1184,16 @@
     "\n",
     "Kommunikationsprotokolle\n",
     "\n",
+    "- IP\n",
+    "- TCP\n",
+    "- UDP\n",
+    "\n",
     "Anwendungsprotokolle\n",
     "\n",
-    "-   SMTP (für E-Mail),\n",
-    "-   SSH (für interaktive Sitzungen auf entfernten Rechnern),\n",
-    "-   DNS (für die Auflösung von Rechnernamen) oder\n",
-    "-   SIP (für Internet-Telefonie) ..."
+    "- SMTP (für E-Mail),\n",
+    "- SSH (für interaktive Sitzungen auf entfernten Rechnern),\n",
+    "- DNS (für die Auflösung von Rechnernamen) oder\n",
+    "- SIP (für Internet-Telefonie) ..."
    ]
   },
   {
@@ -1198,7 +1207,7 @@
     "* Routing (KNT)\n",
     "    * Default Route\n",
     "    * NAT ...\n",
-    "* IP-Adressen zu Namen herausfinden (DNS)"
+    "* Namen zu IP-Adressen herausfinden (DNS)"
    ]
   },
   {
@@ -1209,14 +1218,15 @@
     "\n",
     "Variante 1 (statisch)\n",
     "\n",
-    "-   Eigene IP-Adresse\n",
-    "-   Default Gateway\n",
-    "-   Subnetzmaske\n",
-    "-   Adresse(n) DNS\n",
+    "- Eigene IP-Adresse\n",
+    "- Default Gateway\n",
+    "- Subnetzmaske\n",
+    "- Adresse(n) DNS\n",
     "\n",
     "Variante 2 (dynamisch)\n",
     "\n",
-    "-   DHCP\n",
+    "- DHCP  \n",
+    "  macht alles\n",
     "\n",
     "DNS im eigenen Netzwerk"
    ]
@@ -1253,6 +1263,7 @@
     "## Netzwerk Konfigurationsdateien\n",
     "\n",
     "Debian GNU\n",
+    "\n",
     "- /etc/network/interfaces  \n",
     "  https://wiki.ubuntuusers.de/interfaces/\n",
     "- /usr/share/doc/ifupdown/examples/networkinterfaces.gz\n",
